--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_settings_screens: ^0.3.2-null-safety
+  shared_preferences: ^2.0.8
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
