--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_settings_screens: ^0.3.2-null-safety
   shared_preferences: ^2.0.8
   http: ^0.13.4
+  lazy_load_scrollview: 1.3.0
 
 dev_dependencies:
   flutter_test:
