--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   shared_preferences: ^2.0.8
   http: ^0.13.4
   lazy_load_scrollview: 1.3.0
+  flutter_search_bar: ^3.0.0-dev.1
 
 dev_dependencies:
   flutter_test:
