--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   http: ^0.13.4
   lazy_load_scrollview: 1.3.0
   flutter_search_bar: ^3.0.0-dev.1
+  theme_provider: ^0.5.0
+  provider: ^6.0.1
 
 dev_dependencies:
   flutter_test:
